# chibicc

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  chibicc.h  codegen.c  main.c  parse.c  type.c
include/: stdarg.h
test/: learn1.c  learn_if_else.c  learn_rip.c
